src/styles/globals.css
/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Nova+Square&family=Orbitron&display=swap'); */

/* @tailwind base;
@tailwind components;
@tailwind utilities; */

@import 'tailwindcss/tailwind.css';

body {
  font-family: 'Inter', sans-serif;
}

.ReactModal__Overlay {
  z-index: 20;
}

html {
  scroll-behavior: smooth;
}

.lds-dual-ring-button {
  border-radius: 50%;
  background-color: rgba(168, 85, 247, 0.5);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
}

.lds-dual-ring-button:after {
  content: ' ';
  display: block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: 2px solid;
  border-color: rgb(235, 214, 255) transparent rgb(235, 214, 255) transparent;
  animation: lds-dual-ring-button 1.2s linear infinite;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes lds-dual-ring-button {
  0% {
    transform: translate(-50%, -50%) rotate(0deg);
  }
  100% {
    transform: translate(-50%, -50%) rotate(360deg);
  }
}

